# namoona

./: .pre-commit-config.yaml  404.html  README.md  cookiecutter.json  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: tests.yml
docs/: backend.md  getting-started.md  home.md  index.md  project.md  requirements.md  usage.md
namoona/backend/: config.yml  rest.py
project/: index.html
search/: search_index.json
tests/: test_import.py
usage/: index.html
{{cookiecutter.backend-name}}/backend/: config.yml  rest.py
{{cookiecutter.backend-name}}/src/: {{cookiecutter.backend-name}}.py
{{cookiecutter.repository}}/: .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
{{cookiecutter.repository}}/.github/workflows/: docs.yml  tests.yml
{{cookiecutter.repository}}/docs/: index.md
{{cookiecutter.repository}}/tests/: test_import.py
{{cookiecutter.repository}}/{{cookiecutter.backend}}/analysis/: __init__.py
{{cookiecutter.repository}}/{{cookiecutter.project}}/: __init__.py
{{cookiecutter.repository}}/{{cookiecutter.project}}/analysis/: __init__.py  seed.py
{{cookiecutter.repository}}/{{cookiecutter.project}}/backend/: config.yml  rest.py
{{cookiecutter.repository}}/{{cookiecutter.project}}/pipelines/: pipeline.py
{{cookiecutter.repository}}/{{cookiecutter.project}}/routines/: composite.py  compound.py  simple.py
