[tool.poetry]
name = "{{cookiecutter.backend}}"
version = "0.1.0"
description = "Maestro Backend - {{cookiecutter.backend}}"
authors = ["{{cookiecutter.author}} <{{cookiecutter.email}}>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
maestro = {git = "ssh://git@github.com/CHIMEFRB/maestro.git"}

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
mkdocs-material = "^5.5.3"
pre-commit = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
